[gd_scene load_steps=16 format=3 uid="uid://dx5fx52rbf4jc"]

[ext_resource type="Texture2D" uid="uid://x6tohm8t0aoe" path="res://assets/Btns/PauseBtnNormal.png" id="1_2sex1"]
[ext_resource type="Texture2D" uid="uid://csl02opmhpgh3" path="res://assets/GameLogo/PauseName.png" id="1_csa0s"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_uyrqr"]
[ext_resource type="Shader" path="res://scenes/pause_menu.gdshader" id="2_6j7px"]
[ext_resource type="Texture2D" uid="uid://bkq70s7mtrqrf" path="res://assets/Btns/ResumeBtnNormal.png" id="2_7slxq"]
[ext_resource type="Texture2D" uid="uid://cge0rrdp3c7h1" path="res://assets/Btns/PauseBtnPressed.png" id="2_xp7xt"]
[ext_resource type="Texture2D" uid="uid://grdtfvhwha4r" path="res://assets/Btns/ResumeBtnPressed.png" id="3_steq5"]
[ext_resource type="Texture2D" uid="uid://bs38sni40ixvt" path="res://assets/Btns/HomeBtnNormal.png" id="6_ttywn"]
[ext_resource type="Texture2D" uid="uid://c6ngi1ni8brnx" path="res://assets/Btns/HomeBtnPressed.png" id="7_jlgm0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_38wvh"]
shader = ExtResource("2_6j7px")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_yv7t1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_788yq"]
resource_name = "exit_game"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.8, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exitGame"
}]
}

[sub_resource type="Animation" id="Animation_wpymf"]
resource_name = "not_blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.8, 0.0]
}

[sub_resource type="Animation" id="Animation_e4ajw"]
resource_name = "show_blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mllg8"]
_data = {
"RESET": SubResource("Animation_yv7t1"),
"exit_game": SubResource("Animation_788yq"),
"not_blur": SubResource("Animation_wpymf"),
"show_blur": SubResource("Animation_e4ajw")
}

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("pause_btn", "pause_block", "settings_block", "animation_player")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uyrqr")
pause_btn = NodePath("MarginContainer/PauseBtn")
pause_block = NodePath("VBoxContainer")
settings_block = NodePath("")
animation_player = NodePath("AnimationPlayer")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_38wvh")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64

[node name="PauseBtn" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("1_2sex1")
texture_pressed = ExtResource("2_xp7xt")
texture_hover = ExtResource("2_xp7xt")
texture_focused = ExtResource("2_xp7xt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_csa0s")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 40

[node name="ResumeBtn" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_7slxq")
texture_pressed = ExtResource("3_steq5")
texture_hover = ExtResource("3_steq5")
texture_focused = ExtResource("3_steq5")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="HomeBtn" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_ttywn")
texture_pressed = ExtResource("7_jlgm0")
texture_hover = ExtResource("7_jlgm0")
texture_focused = ExtResource("7_jlgm0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mllg8")
}

[connection signal="button_down" from="MarginContainer/PauseBtn" to="." method="_on_pause_btn_button_down"]
[connection signal="button_down" from="VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_button_down"]
[connection signal="button_down" from="VBoxContainer/HomeBtn" to="." method="_on_home_btn_button_down"]
